--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 
 buildscript {
     ext.kotlin_version = '1.2.41'
+    ext.room_version = "1.1.1"
+
     repositories {
         google()
         jcenter()
